assets/css/style.css
/*------------ Body --------------------------------------------------------*/
body{
    margin: 0;
    font-family: 'Montserrat', sans-serif;
}
/*------------ Header ------------------------------------------------------*/
.heroimage{
    background-image: url("https://source.unsplash.com/3xpalrYpiwo/1920x1280");
    background-position: center;
    background-size: cover;
    height: 75vh;
}

.nav-container{
    display: flex;
    flex-direction: row-reverse;
    width: 100%;
    height: 11vh;
    background-color: #ebe9e9;
}

nav {
    width: 100%;
    position: relative;
    z-index: 2;
}

.navbar{
    padding: 0px 50px 0px 50px; /*Overriding bootstrap default*/
}

nav ul {
    display: flex;
    flex-direction: column;
    list-style: none;
    width: 100%;
    background-color: #ebe9e9;
    padding: 0;
}

nav ul li {
    width: 100%;
    margin-top: 10px;
    text-align: center;
    border: 2px solid rgb(0, 0, 0);         /*temporary*/
    background-color: rgb(146, 208, 186);   /*temporary*/
    z-index: 2;
}

nav ul li:hover {
    border: 2px solid black;
}

nav ul li:hover a{
    color: rgb(255, 255, 255);  /*temporary*/
    text-decoration: none;
}

nav ul li a {
    text-decoration: none;
    font-size: 25px;
    font-family: sans-serif;    /*temporary*/
    color: rgb(0, 0, 0); /*temporary*/
}

.navbar-toggler-icon {
    border: 2px solid rgba(0, 0, 0, 0.1);
    height: 8vh;
}

.navbar-toggler .fa {
    font-size: 7vh;
}

.toggler-logo {
    height: 10vh;
    padding: 3px;
}

.logo {
   width: 11vw;
   height: auto;
   max-height: 17vh;
   display: none;
   border: none;
}

.logo:hover{
    border: none;
}

#hero-quote-text{
    display: none;
    font-style: italic;
    font-family: 'Neucha', cursive;
    background-color: rgb(112, 195, 166);
}

/*---- Trips.html header-----*/

.header-container {
    background-color: rgb(221, 221, 221);
    width:100%;
}


/*--------------Main Content ------------------------------------------------------------*/

#home-container{
    display: flex;
    flex-direction: column;
    width: 100%;
}

#home-first-section, #home-second-section , #home-third-section  {
    background-color: #ebe9e9;   
    flex:1;
    text-align: center;
    padding: 0px 25px;
}

#home-second-section {
    background-color: #d4d4d4; 
}

#home-container h1 {
    padding-top: 20px;
    font-size: 20px;
    height: 70px;
}

#home-container p {
    font-size: 15px;
}

.home-icons{
    font-size: 50px;
    padding: 40px 0px;
    color: rgb(61, 129, 105);
}

/*----- trips.html Main Content -------*/

#cards{
    padding-top: 15px;
    padding-bottom: 30px;
    background-color:#ebe9e9;
}

#cards .container {
    padding-top: 15px;
    
}

.card{
    border: 4px solid rgb(226, 226, 226);
    width: 80vw;
    margin-left: auto;
    margin-right:auto;
}

#cards-heading{
    text-align: center;
    height: 10vh;
}

#cards-heading h1{
    color: rgb(43, 43, 43);
    line-height: 10vh;
    font-size: 6vw;
}

#cards hr {
    border-top: 2.5px solid rgba(0, 0, 0, 0.1);
}

.btn-primary{
    background-color: rgb(48, 160, 85);
    border-color: black;
}

#ethiopia, #india, #mongolia, #mauritania {
    border: 2px solid rgb(116, 116, 116);
     background-size: cover;
    width: 100%;
    height: auto;
    min-height: 40vh;
}
#ethiopia{
    background-image: url("https://i.imgur.com/w2ZaOMA.jpg");
}

#india{
    background-image: url("https://i.imgur.com/FFAQZpj.jpg");
}

#mongolia{
    background-image: url("https://i.imgur.com/5okVH5v.jpg");
}

#mauritania{
     background-image: url("https://i.imgur.com/FVuBrQ3.jpg");
}

#trips-section h1 {
    font-size: 18px;
    color: black;
}

#trips-section p {
    font-size: 13px;
    color: black;
}

#content-eth, #content-ind, #content-mong, #content-maur {
    background-color: rgba(255, 255, 255, 0.7);
    padding: 10px 20px 0px 20px;
    text-align: center;
    width: auto;
    height: auto;
    left: 0;
}

#content-eth,#content-ind ,#content-mong ,#content-maur{
    top: 0;
    background-color: rgba(255, 255, 255, 0.5);
}

.down-arrow{
    position:absolute;
    top: 89%;
    left: 49%;
    transform: translate(-50%); /* source this code */
    font-size: 75px;
}

.down-arrow .fa, #up-arrow .fa {
    color: #fafafa;
    background-color: rgba(208, 208, 208, 0.2);
    display: none;
}

#up-arrow{
    position:absolute;
    top: 0;
    left: 49%;
    transform: translate(-50%); /* source this code */
    font-size: 75px;
}

/*------- gallery.html main content -------*/

#gallery-section{
    background-color:#ebe9e9;
    width: 100%;
}
#gallery-title{
    height: 12vh;
    width: 100%;
    text-align: center;
    background-color: #ebe9e9;
}

#gallery-title h1{
    font-size: 5vw;
    margin-top: 0px; /* Override bootstrap default margin*/
    margin-bottom: 0px;
    padding-top: 2.7vh;
    line-height: 1.3;
    color: rgb(43, 43, 43);
}

.image-container{
    display: block;
    width: 40em;
    height: auto;
    position: relative;
    padding-right: 15px;
    padding-left: 15px;
}

.gallery-image {
    width: 99.5%;
    margin-top: 15px;
    margin-bottom: 15px;
    border: 2px solid #ebe9e9;
}
/*Image captions*/
.image-container p{
    visibility: hidden;
    position: absolute;
    display: inline;
    bottom: 5%;
    left: 5%;
    background-color: rgba(255, 255, 255, 0.541);
    width: 90%;
    height: auto;
    text-align: center;
    margin: 0px 0px 2px 0px;
    font-size: 22px;
    padding-top: 5px;
    padding-bottom: 5px;
}

.image-container:hover p{
    visibility: visible;
}

/*------- contact.html main content ------*/

#form-section{
    background-color: rgb(112, 195, 166);;
}
.form-container{
    background-color: #ebe9e9;
    margin-top: 3rem;
    margin-bottom: 3rem;
    padding: 20px;
}

.form-container h1{
    text-align: center;
}

.review-container{
    display:flex;
    flex-direction: row;
}

.review-one{
    background-color: #ebe9e9; 
    width:100%;
    height: auto;
    overflow: hidden;
}
.customer {
    margin-top: 20px;
}

.customer-img {
    display:block;
    width: 23vw;
    margin-left: auto;
    margin-right: auto;
    border-radius: 150px;
    border: 2px solid #fafafa;
}

.customer-name {
    text-align: center;
    font-size: 28px;
    margin-left: auto;
    margin-right: auto;
}

.review-two{
    background-color: #d4d4d4;
    width:100%;
    height: auto;
}

.review-three{
    background-color: #ebe9e9;
    width:100%;
    height: auto;
}

.fa-star, .fa-star-half {
    font-size: 25px;
    color: rgb(214, 171, 52);
}

.rating{
    margin-top: 15px;
    text-align: center;
}

.review-text{
    padding: 5px 15px 5px 15px;
    margin-bottom: 30px;
}


/*-------------- Footer ------------------------------------------------------------*/

.footer-container{
    display: flex;
    flex-direction: column;
    width: 100%;
    height: auto;
    padding-top: 10px;
    background-color: rgb(146, 208, 186); 
}

.footer-first-section, .footer-second-section, .footer-third-section { 
    flex:1; 
    text-align: center;
    padding: 10px;
}

.footer-first-section {
    margin-top: 20px;
}

.footer-second-section {
    margin: 25px 0;
}

.footer-logo{
    width: 80px;
   height: auto; 
}

.footer-third-section {
    margin-bottom: 20px;
}

.footer-third-section span {
    font-size: 20px;
}

.footer-email {
    display: inline-block;
    margin: 10px 0px;
} 


.footer-icons {
    width: 100%;
    height: auto;
}

.footer-icons .fa {
    font-size: 35px;
}

.fa-facebook-square {
    float: left;
    padding-left: 15px;
    
}

.fa-instagram {
    float: right;
    padding-right: 15px;
}


/*--------------- Media Quieries ----------------------------------------*/

@media (min-width: 576px) {

#trips-section p {
    font-size: 15px;
}

#trips-section h1 {
    font-size: 25px;
}

#ethiopia, #india, #mongolia, #mauritania {
    height: 100vh;
}

#content-eth,#content-ind ,#content-mong ,#content-maur {
    position: static;
}

.down-arrow .fa, #up-arrow .fa{
    display: block;
}

}

@media screen and (min-width: 768px) {

/*--------- 768px Header ---------------*/

#hero-quote{
    position: relative;
}

#hero-quote-text{
    display:inline-block;
    position: absolute;
    top: 40vh;
    right: 40px;
    width: 30%;
    background-color: rgba(255, 255, 255, 0.829); /*temporary*/
    border-radius: 12px;
    font-size: 2.2vw;
    text-align: center;
}

/*--------- 768px Main ------------------*/

#home-container h1 {
    font-size: 25px;
}

/*-trips.html*/

.card{
    width: 100%;
    margin: 0;
}

#cards-heading h1, #gallery-title h1{
    font-size: 35px;
} /* also for gallery page */

#trips-section h1 {
    font-size: 35px;
}

#trips-section p {
    font-size: 15px;
}

#ethiopia, #india, #mongolia, #mauritania {
    position: static;
    height: 100vh;
}

#content-eth, #content-ind, #content-mong, #content-maur {
    width: 70%;
    height: auto;
    position: static;
    border-radius: 70px 70px 0px;
    
}

#content-eth{
    margin-top: 5vh;
    float: right;
}

#content-ind{
    margin-top: 5vh;
    float: right;
}

#content-mong{
   margin-top: 5vh;
    float: right;
}

#content-maur{
    margin-top: 5vh;
    float: right;
    border-radius: 70px 70px 70px 0px;
}


/*--------- 768px Footer ----------------*/

.footer-logo{
    width: 100px;
}

.footer-icons {
    width: 75%;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
}

.footer-icons .fa {
    font-size: 40px;
}

}

@media screen and (min-width: 992px) {

/*--------- 992px Header --------------*/

.transparent{
    background-color: transparent!important;
}


/*--------- 992px Main Content --------------*/
/*nav*/
.logo{
    display: inline-block;
    width: 12vw;
    height: auto;
    margin-top: 0.2vh;
    
}

.nav-container{
    display: flex;
    flex-direction: row;
    width: 100%;
    height: 20vh;
    background-color: #ebe9e9;
}

nav {
    width: 100%;
}

nav ul {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    list-style: none;
    width: 100%;
    margin-top: 1rem;
    padding-left: 0px;
    background-color: transparent;
}

nav ul li {
    width: 14%;
    height: 50%;
    margin-top: 4.3vh;
    text-align: center;
    border: 2px solid rgb(68, 68, 68);
    border-radius: 30px;
    background-color: transparent;
}

nav ul li a {
    text-decoration: none;
    font-size: 2.5vw;
    font-family: sans-serif;    /*temporary*/
    color: black;            /*temporary*/
}

.navbar-toggler{
    display: none;
}

.toggler-logo{
    display:none;
}
/*/nav*/

#home-container{
    flex-direction: row;
}

#gallery-title h1{
    font-size: 40px;
}

/* contact.html */
.customer{
    width: 100%;
    }
.customer-img{
    width:18vw;
    max-width: 220px;
}


/*--------- 992px Footer -----------------------*/

.footer-container{
    flex-direction: row;
}

.footer-second-section{
    position: relative;
}

.footer-logo {
    position: absolute;
    width: 130px;
   top: 50%;                            /* code sourced from freecodecamp.org */
   left: 50%;                           /* code sourced from freecodecamp.org */
   transform: translate(-50%, -50%);    /* code sourced from freecodecamp.org */
}

.footer-first-section, .footer-third-section {
    margin: 0px;
}

.footer-third-section{
    padding-top: 20px;
}

.footer-icons .fa {
    font-size: 45px;
}
    
}

@media screen and (min-width: 1200px) {

/*--------- 1200px Header ----------------------*/

    nav ul li {
    margin-top: 4.3vh;
    
}
/*--------- 1200px Main Content ----------------*/
    #home-container h1 {
    font-size: 35px;
}

/*trips.html*/

#cards-heading h1, #gallery-title h1{
    font-size: 45px;
} /*Also heading for gallery page*/

#trips-section p {
    font-size: 18px;
}

/*--------- 1200px Footer ---------------------*/
.footer-icons .fa {
    font-size: 50px;
}

.footer-third-section{
    padding-top: 10px;
}

}

